--- a/.github/workflows/download-folder.yml
+++ b/.github/workflows/download-folder.yml
@@ -1,12 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Download File
+name: Download Folder
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on: 
   repository_dispatch:
-    types: download-file
+    types: download-folder
   
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -18,8 +18,11 @@ jobs:
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Print Filename
-        run: 'echo "File selected: ${{ github.event.client_payload.filename }}"'
+      - name: Print Foldername
+        run: 'echo "Folder selected: ${{ github.event.client_payload.foldername }}"'
+      - uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r ./${{ github.event.client_payload.foldername }}-zip/${{ github.event.client_payload.foldername }}.zip ./${{ github.event.client_payload.foldername }}
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     #- uses: actions/checkout@v2
 
