--- a/.github/workflows/download-folder.yml
+++ b/.github/workflows/download-folder.yml
@@ -19,7 +19,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-         
+        
+      - name: Present Working Directory
+        run: ls
+        
       - name: Print Foldername
         run: 'echo "Folder selected: ${{ github.event.client_payload.foldername }}"'
         
