--- a/.github/workflows/download-folder.yml
+++ b/.github/workflows/download-folder.yml
@@ -23,15 +23,12 @@ jobs:
       - name: Present Working Directory
         run: pwd && ls -l
       
-      - name: Create Zip
-        run: zip -qq -r ./${{ github.event.client_payload.foldername }}-zip/${{ github.event.client_payload.foldername }}.zip ./${{ github.event.client_payload.foldername }}
-        
       - name: Print Foldername
         run: 'echo "Folder selected: ${{ github.event.client_payload.foldername }}"'
+      
+      - name: Create Zip
+        run: zip -qq -r ${{ github.event.client_payload.foldername }}.zip ${{ github.event.client_payload.foldername }}
         
-      - uses: montudor/action-zip@v0.1.0
-        with:
-          args: zip -qq -r ./${{ github.event.client_payload.foldername }}-zip/${{ github.event.client_payload.foldername }}.zip ./${{ github.event.client_payload.foldername }}
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     #- uses: actions/checkout@v2
 
