--- a/.github/workflows/download-folder.yml
+++ b/.github/workflows/download-folder.yml
@@ -29,6 +29,11 @@ jobs:
       - name: Create Zip
         run: zip -r ${{ github.event.client_payload.foldername }}.zip ${{ github.event.client_payload.foldername }}
         
+      - uses: actions/upload-artifact@v1
+        with:
+          name: my-artifact
+          path: ${{ github.workspace }}/${{ github.event.client_payload.foldername }}.zip
+        
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     #- uses: actions/checkout@v2
 
