--- a/.github/workflows/download-folder.yml
+++ b/.github/workflows/download-folder.yml
@@ -31,7 +31,7 @@ jobs:
         
       - uses: actions/upload-artifact@v1
         with:
-          name: my-artifact
+          name: ${{ github.event.client_payload.foldername }}
           path: ${{ github.workspace }}/${{ github.event.client_payload.foldername }}.zip
         
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
